01-fundamentals/ingress/yaml/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
      - name: api-container
        image: httpd

        ports:
        - containerPort: 80
